--- a/index.html
+++ b/index.html
@@ -51,7 +51,14 @@
 	</header>
 	<section class="about" id="about">
 		<div class="about__photo">
-			<img src="./images/IMG_5076—negtive.jpg" alt="">
+			<img src="./images/negative.jpg" alt="">
+		</div>
+		<div class="about__content">
+			<div class="about__content-title">About Me</div>
+			<div class="about__content-text">An inquisitive Computer Science Engineering student, skilled in leadership, seeking to leverage solid development skills with focus on collaboration, communication and passion.</div>
+			<div class="about__content-button">
+				<button>Download CV</button>
+			</div>
 		</div>
 	</section>
 	<script src="libs/jquery/jquery-3.6.0.min.js" defer></script>
