--- a/index.html
+++ b/index.html
@@ -1,51 +1,96 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>My site</title>
-    <meta name="description" content="Simple Starter Description">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta property="og:image" content="images/preview.jpg">
-    <link rel="icon" href="">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/media.css">
+	<meta charset="utf-8">
+	<title>My site</title>
+	<meta name="description" content="Simple Starter Description">
+	<meta name="viewport"
+		content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<meta property="og:image" content="images/preview.jpg">
+	<link rel="icon" href="">
+	<link rel="stylesheet" href="./css/style.css">
+	<link rel="stylesheet" href="./css/media.css">
+	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+
+	<link rel="stylesheet" type="text/css"
+		href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
 </head>
 
 <body>
 
-<div class="header">
-    <div class="container">
-        <div class="header__inner">
-            <div class="header__logo">GoTrip</div>
-            <div class="header__menu menu">
-                <ul class="menu__list">
-                    <li class="menu__item"><a href="#" class="menu__link">Home</a></li>
-                    <li class="menu__item"><a href="#" class="menu__link">Services</a></li>
-                    <li class="menu__item"><a href="#" class="menu__link">Pricing</a></li>
-                    <li class="menu__item"><a href="#" class="menu__link">Contact</a></li>
-                </ul>
-            </div>
-            <div class="header__button">
-                <div class="header__button-normal">
-                    <a href="#">Sign up</a>
-                </div>
-                <div class="header__button-active btn">
-                    <a href="#">Login</a>
-                </div>
-            </div>
-        </div>
-        <div class="header__content"></div>
-        <div class="header__img">
-            <img src="./images/header-photo.png" alt="">
-        </div>
-    </div>
-</div>
+	<div class="header">
+		<div class="container">
+			<div class="header__inner">
+				<div class="header__top">
+					<div class="header__logo"><a href="#!">GoTrip</a></div>
+					<div class="header__menu menu">
+						<ul class="menu__list">
+							<li class="menu__item"><a href="#!" class="menu__link">Home</a></li>
+							<li class="menu__item"><a href="#!" class="menu__link">Services</a></li>
+							<li class="menu__item"><a href="#!" class="menu__link">Pricing</a></li>
+							<li class="menu__item"><a href="#!" class="menu__link">Contact</a></li>
+						</ul>
+					</div>
+					<div class="header__button">
+						<div class="header__button-normal">
+							<a href="#">Sign up</a>
+						</div>
+						<div class="header__button-active btn">
+							<a href="#">Login</a>
+						</div>
+					</div>
+				</div>
+				<div class="header__row">
+					<div class="header__content">
+						<div class="header__badge">exsplore the world</div>
+						<h1 class="header__title title">Explore The Natural
+							Beauty Of Halmahera
+							With Us</h1>
+						<div class="header__text text">explore the beauty of god's earth in a beautiful forest and have fun
+						</div>
+						<a class="header__btn" href="#1">Exsplore Now</a>
+					</div>
+					<div class="header__img">
+						<img src="./images/header-photo.png" alt="">
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<main>
+		<section class="destinations">
+			<div class="container-right">
+				<div class="destinations__row">
+					<div class="destinations__content">
+						<h2 class="destinations__title title">
+							<span>Choice Of </span>
+							Destinations
+						</h2>
+						<div class="destinations__text text">
+							explore the beauty of god's earth in a beautiful forest and have fun
+						</div>
+						<a href="#!" class="destinations__btn">Exsplore Now</a>
+					</div>
+					<div class="destinations__slider">
+						<div class="slider single-item">
+							<div class="slider__item"><img src="/images/Rectangle 24.png" alt=""></div>
+							<div class="slider__item"><img src="/images/Rectangle 25.png" alt=""></div>
+							<div class="slider__item"><img src="/images/Rectangle 26.png" alt=""></div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+	</main>
 
 
-<script src="libs/jquery/jquery-3.6.0.min.js" defer></script>
-<script src="js/common.js" defer></script>
+
+
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+	<script src="js/common.js" defer></script>
 </body>
 
 </html>
