--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
 	<link rel="icon" href="">
 	<link rel="stylesheet" href="./css/style.css">
 	<link rel="stylesheet" href="./css/media.css">
-	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
-
-	<link rel="stylesheet" type="text/css"
-		href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+		integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<link rel="stylesheet"
+		href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+		integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -73,10 +76,20 @@
 						<a href="#!" class="destinations__btn">Exsplore Now</a>
 					</div>
 					<div class="destinations__slider">
-						<div class="slider single-item">
-							<div class="slider__item"><img src="/images/Rectangle 24.png" alt=""></div>
-							<div class="slider__item"><img src="/images/Rectangle 25.png" alt=""></div>
-							<div class="slider__item"><img src="/images/Rectangle 26.png" alt=""></div>
+						<div class="slider">
+							<div class="owl-carousel">
+								<img class="slider__item" src="/images/Rectangle 24.png" alt="">
+								<img class="slider__item" src="/images/Rectangle 25.png" alt="">
+								<img class="slider__item" src="/images/Rectangle 26.png" alt="">
+							</div>
+
+							<button class="slider__btn slider__btn-prev">
+								<img src="/images/prev-arrow.svg" alt="">
+							</button>
+							<button class="slider__btn slider__btn-next">
+								<img src="/images/next-arrow.svg" alt="">
+							</button>
+
 						</div>
 					</div>
 				</div>
@@ -87,9 +100,12 @@
 
 
 
-	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
-
-	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+		integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+		integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="js/common.js" defer></script>
 </body>
 
