--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
 							With Us</h1>
 						<div class="header__text text">explore the beauty of god's earth in a beautiful forest and have fun
 						</div>
-						<a class="header__btn" href="#1">Exsplore Now</a>
+						<a class="header__btn" href="#1">Exsplore
+							
+						</a>
 					</div>
 					<div class="header__img">
 						<img src="./images/header-photo.png" alt="">
@@ -89,15 +91,37 @@
 							<button class="slider__btn slider__btn-next">
 								<img src="/images/next-arrow.svg" alt="">
 							</button>
-
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
 	</main>
-
-
+	<section class="about">
+		<div class="container">
+			<div class="about__inner">
+				<div class="about__img">
+					<img src="/images/photo.jpg" alt="">
+				</div>
+				<div class="about__content">
+					<div class="about__content-title">What do customers say about us?</div>
+					<div class="country">
+						<div class="about__content-icon">
+							<img src="/images/image.png" alt="">
+						</div>
+						<div class="place">
+							<div class="place__name">Alpanasap</div>
+							<div class="place__adress">Japung, Indonesia</div>
+						</div>
+					</div>
+					<div class="about__content-text">Very satisfying service makes it comfortable, a beautiful place in the world. </div>
+					<div class="about__content-rating">
+						<img src="/images/stars-rating.svg" alt="">
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
