finished desktop version

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						<div class="header__text text">explore the beauty of god's earth in a beautiful forest and have fun
 						</div>
 						<a class="header__btn" href="#1">Exsplore
-							
+
 						</a>
 					</div>
 					<div class="header__img">
@@ -114,7 +114,8 @@
 							<div class="place__adress">Japung, Indonesia</div>
 						</div>
 					</div>
-					<div class="about__content-text">Very satisfying service makes it comfortable, a beautiful place in the world. </div>
+					<div class="about__content-text">Very satisfying service makes it comfortable, a beautiful place in the
+						world. </div>
 					<div class="about__content-rating">
 						<img src="/images/stars-rating.svg" alt="">
 					</div>
@@ -122,6 +123,58 @@
 			</div>
 		</div>
 	</section>
+
+	<section class="exploring">
+		<div class="container">
+			<div class="exploring__body">
+				<div class="exploring__title">Prepare Yourself And
+					Start Exploring With Us.</div>
+				<div class="exploring__text">There's the best discount for you today.</div>
+				<div class="exploring_btn btn">
+					<a href="#!">Get Started</a>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="subscribe">
+		<div class="container">
+			<div class="subscribe__inner">
+				<div class="subscribe__title title">Subscribe <br>
+					To Our Newsletter</div>
+				<div class="subscribe__form">
+					<form class="subscribe__form-email">
+						<lable class="subscribe__form-email-input">
+							<input placeholder="Yourmail@mail.com" type="text">
+						</lable>
+						<button class="subscribe__btn btn" type="submit">Subscribe</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</section>
+	<footer class="footer">
+		<div class="container">
+			<div class="header__top">
+				<div class="footer__logo header__logo"><a href="#!">GoTrip</a></div>
+				<div class="header__menu menu">
+					<ul class="footer__list menu__list">
+						<li class="footer__item menu__item"><a href="#!" class="footer__item menu__link">Home</a></li>
+						<li class="footer__item menu__item"><a href="#!" class="footer__item menu__link">Services</a></li>
+						<li class="footer__item menu__item"><a href="#!" class="footer__item menu__link">Pricing</a></li>
+						<li class="footer__item menu__item"><a href="#!" class="footer__item menu__link">Contact</a></li>
+					</ul>
+				</div>
+				<div class="header__button">
+					<div class="footer__button-normal header__button-normal">
+						<a href="#">Sign up</a>
+					</div>
+					<div class="header__button-active btn">
+						<a href="#">Login</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
 
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
