added mobile version

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="viewport"
 		content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta property="og:image" content="images/preview.jpg">
-	<link rel="icon" href="">
+	<link rel="icon" href="/images/favicon/icons8-monitor-96 (1).png" type="image/png">
 	<link rel="stylesheet" href="./css/style.css">
 	<link rel="stylesheet" href="./css/media.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
@@ -26,6 +26,9 @@
 		<div class="container">
 			<div class="header__inner">
 				<div class="header__top">
+					<div class="header__burger">
+						<span></span>
+					 </div>
 					<div class="header__logo"><a href="#!">GoTrip</a></div>
 					<div class="header__menu menu">
 						<ul class="menu__list">
@@ -168,7 +171,7 @@
 					<div class="footer__button-normal header__button-normal">
 						<a href="#">Sign up</a>
 					</div>
-					<div class="header__button-active btn">
+					<div class="footer__button-active header__button-active btn">
 						<a href="#">Login</a>
 					</div>
 				</div>
