Added '.' in the image path

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="viewport"
 		content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta property="og:image" content="images/preview.jpg">
-	<link rel="icon" href="/images/favicon/icons8-monitor-96 (1).png" type="image/png">
+	<link rel="icon" href="./images/favicon/icons8-monitor-96 (1).png" type="image/png">
 	<link rel="stylesheet" href="./css/style.css">
 	<link rel="stylesheet" href="./css/media.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
@@ -83,16 +83,16 @@
 					<div class="destinations__slider">
 						<div class="slider">
 							<div class="owl-carousel">
-								<img class="slider__item" src="/images/Rectangle 24.png" alt="">
-								<img class="slider__item" src="/images/Rectangle 25.png" alt="">
-								<img class="slider__item" src="/images/Rectangle 26.png" alt="">
+								<img class="slider__item" src="./images/Rectangle 24.png" alt="">
+								<img class="slider__item" src="./images/Rectangle 25.png" alt="">
+								<img class="slider__item" src="./images/Rectangle 26.png" alt="">
 							</div>
 
 							<button class="slider__btn slider__btn-prev">
-								<img src="/images/prev-arrow.svg" alt="">
+								<img src="./images/prev-arrow.svg" alt="">
 							</button>
 							<button class="slider__btn slider__btn-next">
-								<img src="/images/next-arrow.svg" alt="">
+								<img src="./images/next-arrow.svg" alt="">
 							</button>
 						</div>
 					</div>
@@ -104,13 +104,13 @@
 		<div class="container">
 			<div class="about__inner">
 				<div class="about__img">
-					<img src="/images/photo.jpg" alt="">
+					<img src="./images/photo.jpg" alt="">
 				</div>
 				<div class="about__content">
 					<div class="about__content-title">What do customers say about us?</div>
 					<div class="country">
 						<div class="about__content-icon">
-							<img src="/images/image.png" alt="">
+							<img src="./images/image.png" alt="">
 						</div>
 						<div class="place">
 							<div class="place__name">Alpanasap</div>
@@ -120,7 +120,7 @@
 					<div class="about__content-text">Very satisfying service makes it comfortable, a beautiful place in the
 						world. </div>
 					<div class="about__content-rating">
-						<img src="/images/stars-rating.svg" alt="">
+						<img src="./images/stars-rating.svg" alt="">
 					</div>
 				</div>
 			</div>
