--- a/index.html
+++ b/index.html
@@ -34,18 +34,19 @@
 					<div class="header__logo"><a href="#!">GoTrip</a></div>
 					<div class="header__menu menu">
 						<ul class="menu__list">
+						
 							<li class="menu__item"><a href="#!" class="menu__link">Home</a></li>
 							<li class="menu__item"><a href="#!" class="menu__link">Services</a></li>
 							<li class="menu__item"><a href="#!" class="menu__link">Pricing</a></li>
 							<li class="menu__item"><a href="#!" class="menu__link">Contact</a></li>
 						</ul>
-					</div>
-					<div class="header__button">
-						<div class="header__button-normal">
-							<a href="#">Sign up</a>
-						</div>
-						<div class="header__button-active btn">
-							<a href="#">Login</a>
+						<div class="header__button">
+							<div class="header__button-normal">
+								<a href="#">Sign up</a>
+							</div>
+							<div class="header__button-active btn">
+								<a href="#">Login</a>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -85,7 +86,7 @@
 					</div>
 					<div class="destinations__slider">
 						<div class="slider">
-							<div class="owl-carousel">
+							<div class="owl-carousel owl-theme">
 								<img class="slider__item" src="./images/Rectangle 24.png" alt="">
 								<img class="slider__item" src="./images/Rectangle 25.png" alt="">
 								<img class="slider__item" src="./images/Rectangle 26.png" alt="">
@@ -180,7 +181,13 @@
 				</div>
 				<div class="footer__go-back">
 					<a href="index.html" class="footer__go-back--up">
-						<svg class="footer__svg" width="24" height="24" clip-rule="evenodd" fill-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="m2.019 11.993c0 5.518 4.48 9.998 9.998 9.998 5.517 0 9.997-4.48 9.997-9.998s-4.48-9.998-9.997-9.998c-5.518 0-9.998 4.48-9.998 9.998zm1.5 0c0-4.69 3.808-8.498 8.498-8.498s8.497 3.808 8.497 8.498-3.807 8.498-8.497 8.498-8.498-3.808-8.498-8.498zm4.715-1.528s1.505-1.502 3.259-3.255c.147-.146.338-.219.53-.219s.384.073.53.219c1.754 1.753 3.259 3.254 3.259 3.254.145.145.217.336.216.527 0 .191-.074.383-.22.53-.293.293-.766.294-1.057.004l-1.978-1.978v6.694c0 .413-.336.75-.75.75s-.75-.337-.75-.75v-6.694l-1.978 1.979c-.29.289-.762.286-1.055-.007-.147-.146-.22-.338-.221-.53-.001-.19.071-.38.215-.524z" fill-rule="nonzero"/></svg>
+						<svg class="footer__svg" width="24" height="24" clip-rule="evenodd" fill-rule="evenodd"
+							stroke-linejoin="round" stroke-miterlimit="2" viewBox="0 0 24 24"
+							xmlns="http://www.w3.org/2000/svg">
+							<path
+								d="m2.019 11.993c0 5.518 4.48 9.998 9.998 9.998 5.517 0 9.997-4.48 9.997-9.998s-4.48-9.998-9.997-9.998c-5.518 0-9.998 4.48-9.998 9.998zm1.5 0c0-4.69 3.808-8.498 8.498-8.498s8.497 3.808 8.497 8.498-3.807 8.498-8.497 8.498-8.498-3.808-8.498-8.498zm4.715-1.528s1.505-1.502 3.259-3.255c.147-.146.338-.219.53-.219s.384.073.53.219c1.754 1.753 3.259 3.254 3.259 3.254.145.145.217.336.216.527 0 .191-.074.383-.22.53-.293.293-.766.294-1.057.004l-1.978-1.978v6.694c0 .413-.336.75-.75.75s-.75-.337-.75-.75v-6.694l-1.978 1.979c-.29.289-.762.286-1.055-.007-.147-.146-.22-.338-.221-.53-.001-.19.071-.38.215-.524z"
+								fill-rule="nonzero" />
+						</svg>
 					</a>
 				</div>
 			</div>
