added mobile version

--- a/index.html
+++ b/index.html
@@ -92,9 +92,15 @@
 							</div>
 
 							<button class="slider__btn slider__btn-prev">
+								<svg width="16" height="20" viewBox="0 0 16 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M13 3L3.32575 9.15634C2.70826 9.54929 2.70825 10.4507 3.32575 10.8437L13 17" stroke="#FEFEFE" stroke-width="5" stroke-linecap="round"/>
+									</svg>
 								<img src="./images/prev-arrow.svg" alt="">
 							</button>
 							<button class="slider__btn slider__btn-next">
+								<svg width="16" height="20" viewBox="0 0 16 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M3.09936 17.0769L12.6857 10.7846C13.2976 10.383 13.2849 9.48167 12.6619 9.09747L2.90169 3.07834" stroke="#FEFEFE" stroke-width="5" stroke-linecap="round"/>
+									</svg>
 								<img src="./images/next-arrow.svg" alt="">
 							</button>
 						</div>
